add kycloud to doc entry page

--- a/entry/index.html
+++ b/entry/index.html
@@ -10,21 +10,21 @@
 			<img src="img/logo.png"/ style="margin-top: 12px;margin-left:80px;">
 		</header>
 	    <article class="big_box">
-	    	<span class="main_title"> KAP手册</span>
+	    	<span class="main_title"> KAP Manual</span>
 	    	<aside class="one_box">
 	    		<section class="first_box">
 	    			<span>
 	    				<img src="img/icon1.png">&nbsp;
 	    			</span>
 	    			<span class="choose_button">
-	    				KAP-2.4
+	    				KAP-2.5
 	    			</span>
 	    			 <span class="CE_change">
-	    			 	<a href="http://docs.kyligence.io/v2.4/zh-cn/" class="character">中文</a>
-                                        <a href="http://docs.kyligence.io/v2.4/zh-cn/kap2_4-zh.pdf" class="character"> (PDF) </a> 
+	    			 	<a href="http://docs.kyligence.io/v2.5/zh-cn/" class="character">中文</a>
+                                        <a href="http://docs.kyligence.io/v2.5/zh-cn/kap2_5-zh.pdf" class="character"> (PDF) </a> 
 	    			 	<span>&nbsp;&nbsp;|&nbsp;&nbsp;</span>
-	    			 	<a href="http://docs.kyligence.io/v2.4/en/" class="character">English</a>
-                                        <a href="http://docs.kyligence.io/v2.4/en/kap2_4-en.pdf" class="character"> (PDF) </a>
+	    			 	<a href="http://docs.kyligence.io/v2.5/en/" class="character">English</a>
+                                        <a href="http://docs.kyligence.io/v2.5/en/kap2_5-en.pdf" class="character"> (PDF) </a>
 	    			 </span>
 	    		</section>
 	    		<hr class="one_line"/>
@@ -33,14 +33,32 @@
 	    				<img src="img/icon1.png">&nbsp;
 	    			</span>
 	    			<span class="choose_button">
-	    				KAP-2.3
+	    				KAP-2.4
 	    			</span>
 	    			 <span class="CE_change">
-	    				<a href="http://docs.kyligence.io/v2.3/zh-cn/" class="character">中文</a>
-                                        <a href="http://docs.kyligence.io/v2.3/zh-cn/kap2_3-zh.pdf" class="character"> (PDF) </a>
+	    				<a href="http://docs.kyligence.io/v2.4/zh-cn/" class="character">中文</a>
+                                        <a href="http://docs.kyligence.io/v2.4/zh-cn/kap2_4-zh.pdf" class="character"> (PDF) </a>
 	    				<span>&nbsp;&nbsp;|&nbsp;&nbsp;</span>
-	    			 	<a href="http://docs.kyligence.io/v2.3/en/" class="character">English</a>
-                                        <a href="http://docs.kyligence.io/v2.3/en/kap2_3-en.pdf" class="character"> (PDF) </a>
+	    			 	<a href="http://docs.kyligence.io/v2.4/en/" class="character">English</a>
+                                        <a href="http://docs.kyligence.io/v2.4/en/kap2_4-en.pdf" class="character"> (PDF) </a>
+	    			 </span>
+	    		</section>
+	    	</aside>
+	    </article>
+	    <article class="big_box">
+	    	<span class="main_title"> Kyligence Cloud Manual</span>
+	    	<aside class="one_box" style="height: 120px">
+	    		<section class="first_box">
+	    			<span>
+	    				<img src="img/icon1.png">&nbsp;
+	    			</span>
+	    			<span class="choose_button">
+	    				Manual
+	    			</span>
+	    			 <span class="CE_change">
+	    			 	<a href="http://docs.kyligence.io/cloud/zh-cn/" class="character">中文</a>
+	    			 	<span>&nbsp;&nbsp;|&nbsp;&nbsp;</span>
+	    			 	<a href="http://docs.kyligence.io/cloud/en/" class="character">English</a>
 	    			 </span>
 	    		</section>
 	    	</aside>
