--- a/entry/index.html
+++ b/entry/index.html
@@ -9,6 +9,7 @@
 		<header class="nav">
 			<img src="img/logo.png"/ style="margin-top: 12px;margin-left:80px;">
 		</header>
+		<div id="doc_content">
 	    <article class="big_box">
 	    	<span class="main_title"> KAP Manual</span>
 	    	<aside class="one_box">
@@ -63,6 +64,7 @@
 	    		</section>
 	    	</aside>
 	    </article>
+	    </div>
 	    <footer class="foot_box">
 	    	<hr class="two_line"/>
 	    	<p class="tip">Copyright © Kyligence Inc.</p>
